# provoke

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  action.yml  provoke.benchmark.yaml  provoke.example.yaml  provoke.ollama.yaml  pyproject.toml
.github/workflows/: ci.yml  llm-redteam.yml  release.yml
examples/: README.md  deepseek-r1-7b-report.json  deepseek-r1-7b-report.md  deepseek-r1-7b-report.sarif
src/provoke/: __init__.py  __main__.py  benchmark.py  cli.py  compare.py  config.py  discovery.py  engine.py  models.py  reasoning.py  standards.py
src/provoke/data/: __init__.py  refusal_phrases.yaml
src/provoke/data/payloads/: __init__.py  agentic_tool_abuse.yaml  crescendo.yaml  jailbreak.yaml  output_handling.yaml  prompt_injection.yaml  system_prompt_leak.yaml
src/provoke/detectors/: __init__.py  base.py  compliance_token.py  llm_judge.py  refusal.py  string_match.py
src/provoke/probes/: __init__.py  agentic_tool_abuse.py  base.py  crescendo.py  jailbreak.py  output_handling.py  prompt_injection.py  system_prompt_leak.py
src/provoke/reporting/: __init__.py  aggregate.py  diff_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
src/provoke/targets/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_cli.py  test_compare.py  test_config.py  test_detectors.py  test_discovery.py  test_engine.py  test_probes.py  test_reasoning.py  test_reporting.py  test_targets.py
