[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provoke"
version = "0.1.0"
description = "Continuous adversarial red-teaming for LLM applications, built to gate CI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm-security", "red-team", "prompt-injection", "owasp-llm", "mitre-atlas", "ci"]
authors = [{ name = "Abraar02", email = "mohammadabraar2@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.scripts]
provoke = "provoke.cli:main"

[project.urls]
Homepage = "https://github.com/Abraar02/provoke"
Issues = "https://github.com/Abraar02/provoke/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/provoke"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["provoke"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
disallow_untyped_decorators = false
